# Terminal_assistant

./: .gitignore  README.md  app.py  pyproject.toml  run_agent_pip.sh  run_agent_uv.sh  setup_env.sh  stop_agent.sh
front_end/: index.html  script.js  style.css
src/: agent.py
src/tools/: __init__.py  calculator.py  system_commands.py  web_search.py
